# stock_analizer

./: .gitignore  COST_REDUCTION_ANALYSIS.md  DEPLOY_COST_PLAN.md  EGRESS_FIX_README.md  LICENSE  README.md  SSE_PING_FIX_README.md  buy_sell_signal.py  celery_app.py  data.db  egress-fix.patch  lstm_model.h5  main.py  most_traded_stock.py  nixpacks.toml  pyproject.toml  railway-beat.toml  railway-worker.toml  railway.toml  sse-ping-fix.patch  stage2.py  start_api.py  start_celery_beat.py  start_celery_worker.py  ticker_signal.py  trending_stocks.py
aignitequant/: config.py  market_calendar.py
aignitequant/app/: db.py  main.py  middleware.py
aignitequant/app/api/: routes.py
aignitequant/app/services/: events.py  fear_greed.py  intraday_data.py  market_data.py  market_pulse.py  polygon.py  polygon_options.py  sp500.py
aignitequant/app/strategies/: bora_strategy.py  canslim_strategy.py  earnings_quality_score.py  felix_strategy.py  follow_the_money.py  golden_cross_strategy.py  leap_option_strategy1.py  leap_option_strategy2.py  marios_stamatoudis_swing_strategy.py  stage2.py  vcp_scanner_strategy.py  vibia_j_hybrid_strategy.py
aignitequant/tasks/: __init__.py  celery_app.py  scheduler.py  strategy_tasks.py
stock_analizer/: bora.py  canslim_screener.py  check_db.py  data.db  golden_cross.py  run.py  stage2.py  stock_prediction.py  trending_stocks.py
stock_analizer/app/: db.py  db_query_test.py  main.py
stock_analizer/app/api/: routes.py
stock_analizer/app/services/: fear_greed.py  polygon.py  polygon_options.py  sp500.py
stock_analizer/app/strategies/: bora_strategy.py  canslim_strategy.py  follow_the_money.py  golden_cross_strategy.py  run_option_strategies.py  stage2.py  stock_prediction.py  vcp_scanner_strategy.py
tests/: __init__.py
tools/: earnings_quality_status.html
