[project]
name = "stock-analizer"
version = "0.1.0"
description = "stock market analizing profitable stocks, I am mining gold"
authors = [
    {name = "haci karahasanoglu",email = "haci@hacikho.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn (>=0.34.2,<0.35.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "cachetools (>=5.5.2,<6.0.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "boto3 (>=1.38.12,<2.0.0)",
    "yfinance (>=0.2.61,<0.3.0)",
    "snscrape (>=0.3.0,<0.4.0)",
    "vaderSentiment (>=3.3.2,<4.0.0)"
    ,"fear-and-greed (>=1.0.6,<2.0.0)"
    ,"celery (>=5.3.6,<6.0.0)"
    ,"redis (>=5.0.4,<6.0.0)"
    ,"apscheduler (>=3.10.4,<4.0.0)"
    ,"pytz (>=2024.1,<2025.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
